compiler/test/conformance/valid/expr_string_interp.tu
// expr: interpolação de string ${ ... } (inclui expressão)
fn main() {
  let name = "Itá"
  let a = 7
  let b = 6
  print("Olá, ${name}!")
  print("${a} * ${b} = ${a * b}")
}
