compiler/test/conformance/invalid/inv_let_destructure_no_value.tu
// INVÁLIDO: destructuring de let exige "=" expressão
fn main() {
  let { a, b }
  print(a)
}
